# MI_COMPUTER_GRAPHICS_2015

./: .gitignore  CMakeLists.txt  README.md  requirements.md
Aufgabe-4-Snake/: CMakeLists.txt  Cuboid.cpp  Cuboid.h  Game.cpp  Game.h  GlObject.cpp  GlObject.h  Playground.cpp  Playground.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  ScorePrinter.cpp  ScorePrinter.h  Snake.cpp  Snake.h  SnakeHead.cpp  SnakeHead.h  SnakeHeadObject.cpp  SnakeHeadObject.h  SnakePart.cpp  SnakePart.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleCuboid.cpp  TriangleCuboid.h  main.cpp
Aufgabe1/: CMakeLists.txt  main.cpp
Aufgabe2/: CMakeLists.txt  main.cpp
Aufgabe3/: CMakeLists.txt  main.cpp
Documents/: Projektthema_GC2015.docx
_cmake/: SetupGLFW.cmake  SetupGlut.cmake  SetupOpenGl.cmake
_lib/: CMakeLists.txt  Plane.cpp  Plane.h  Quarter.cpp  Quarter.h  Sphere.cpp  Sphere.h  SphereOld.cpp  SphereOld.h  darwQuarter.cpp  darwQuarter.h  drawQuarter.cpp  drawQuarter.h  utils.cpp  utils.h
